test/MC/SVE/regression-tests/negative_tests/sve-ldnt1b-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU8CLoadNT1LSSZ
// Offset register Rm cannot be xzr
ldnt1b z20.b, p2/z, [x8, xzr]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
